--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">About Me</a>
+      <a class="navbar-brand" href="index.html">Home</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -75,22 +75,24 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-sm-12">
-    <h3>Summary</h3>
     <p>
-      Brett is a student at the Kellogg School of Management at Northwestern University.
-      He is also a Senior Associate at Heitman, a real estate investment management firm.
-      He enjoys reading, running, and working with technology.</p>
+      Hello Internet! My name is Brett. I am a student at the Kellogg School of Management at Northwestern University.
+      I also work full time at Heitman, a real estate investment management firm.
+      I enjoy reading, running, and working with technology. More on this on my <a href="interests.html"> interests </a>page.</p>
+    </div>
+<div class="col-sm-12">
+    <h3>Biography</h3>
 
-    <h3>Experience</h3>
-
-    <h4>Senior Associate at Heitman, 2014 - Present</h4>
-    <p>Client Service and Marketing Associate.</p>
+    <h4>Early Days</h4>
+    <p>I grew up in Northbrook, Illinois, the son of two real estate professionals. I was a pretty active kid, participating in a variety of sports, theater, and outdoor activities growing up.</p>
     <p>Sales support and CRM administration.</p>
 
     <h4>Associate at Heitman, 2012 - 2014</h4>
     <p>Client Service and Marketing Associate.</p>
     <p>RFP writing.</p>
+</div>
 
+<div class="col-sm-12">
     <h3>Skills</h3>
     <ul>
       <li>Atom, HTML, and CSS!</li>
@@ -98,13 +100,21 @@
       <li>Microsoft Office</li>
       <li>Making tea</li>
     </ul>
+</div>
 
+<div class="col-sm-12">
     <h3>Education</h3>
     <ul>
       <li>Masters of Business Administration with concentrations in Managerial Analytics, Marketing, <em>Northwestern University, 2016</em></li>
       <li>Bachelors of Science in Finance, <em>Miami University, 2009</em></li>
     </ul>
-
+</div>
 
   </body>
+
+  <footer class="footer">
+       <div class="container">
+         <p class="text-muted" style="margin:25px 0px 10px 0px">Designed by Brett.</p>
+       </div>
+     </footer>
 </html>
