--- a/interests.html
+++ b/interests.html
@@ -21,7 +21,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">About Me</a>
+      <a class="navbar-brand" href="index.html">Home</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -64,7 +64,7 @@
     </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
     </nav>
-    
+
     <div class="header">
       <img width="500"src="photo.jpg">
       <h1>Brett A. Hogan</h1>
@@ -108,4 +108,10 @@
 
 
   </body>
+
+  <footer class="footer">
+       <div class="container">
+         <p class="text-muted" style="margin:25px 0px 10px 0px">Designed by Brett.</p>
+       </div>
+     </footer>
 </html>
