--- a/travel.html
+++ b/travel.html
@@ -25,7 +25,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">About Me</a>
+      <a class="navbar-brand" href="index.html">Home</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -36,8 +36,8 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More Information <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="https://en.wikipedia.org/wiki/Greece">Greece</a></li>
-            <li><a href="https://en.wikipedia.org/wiki/Copenhagen">Copenhagen</a></li>
+            <li><a href="interests.html">Interests</a></li>
+            <li><a href="travel.html">Travel</a></li>
             <li><a href="https://en.wikipedia.org/wiki/Bruges">Brugge</a></li>
             <li><a href="https://en.wikipedia.org/wiki/Amsterdam">Amsterdam</a></li>
             <!-- <li role="separator" class="divider"></li>
