--- a/index.html
+++ b/index.html
@@ -66,11 +66,14 @@
     </nav>
 
     <div class="header">
+      <div class="row">
+        <div class="col-sm-12">
       <img width="500"src="photo.jpg">
       <h1>Brett A. Hogan</h1>
-      <h2><font color="Purple">Welcome!</font></h2>
-
+      <h2>Welcome!</h2>
     </div>
+  </div>
+</div>
 
 <div class="container-fluid">
   <div class="row">
@@ -84,36 +87,36 @@
     <h3>Biography</h3>
 
     <h4>Early Days</h4>
-    <p>I grew up in Northbrook, Illinois, the son of two real estate professionals. I was a pretty active kid, participating in a variety of sports, theater, and outdoor activities growing up.</p>
+    <p>I grew up in Northbrook, Illinois, the son of two real estate professionals. I was a pretty active kid, participating in a variety of sports, theater, and outdoor activities growing up.
+    I made a few great friends, who are still all with me today. </p>
     <p>Sales support and CRM administration.</p>
 
-    <h4>Associate at Heitman, 2012 - 2014</h4>
-    <p>Client Service and Marketing Associate.</p>
-    <p>RFP writing.</p>
-</div>
+    <h4>High School</h4>
+    <p>When I didn't make the golf team as a freshman, I decided to go out for cross-country and track. It was then I developed my life long interest in running.
+    I also sang with the high school choir, as well as with some of my best friends in an a capella group called "The Bassics". We were ok.</p>
+    <p>I was also heavily involved in Boy Scouts. I spent summers at camp earning merit badges and selling lemonade to raise money for our troop.
+      Fall and spring brought campouts in Wisconsin with activities ranging from mountain biking to rocketry.
+      In 2005, I earned the rank of Eagle Scout, one of my proudest achievements. </p>
+      <p>While in high school, I met my now wife, Andrea. We've been together for over 10 years.</p>
 
-<div class="col-sm-12">
-    <h3>Skills</h3>
-    <ul>
-      <li>Atom, HTML, and CSS!</li>
-      <li>Helping family with technology</li>
-      <li>Microsoft Office</li>
-      <li>Making tea</li>
-    </ul>
-</div>
+      <h4>Undergraduate School</h4>
+      <p>I attended Miami University in Oxford, Ohio, where I received a Bachelors of Science in Finance in 2009. I also played Ultimate Frisbee and was president of the club at Miami.
+        Oxford is a beautiful place, and I encourage anyone passing through to stop by for a few hours.</p>
 
-<div class="col-sm-12">
-    <h3>Education</h3>
-    <ul>
-      <li>Masters of Business Administration with concentrations in Managerial Analytics, Marketing, <em>Northwestern University, 2016</em></li>
-      <li>Bachelors of Science in Finance, <em>Miami University, 2009</em></li>
-    </ul>
+        <h4>Professional</h4>
+        <p>2009 was the worst year to graduate college. I took a minimum wage internship for eight months with a company called Heitman. There, I worked in the Portfolio and Asset Management group.
+          I was then hired on full time as a staff accountant in the private real estate equity group, working on two separate accounts. My time there taught me much about real estate, investment management, and
+          accounting. In 2012, I had the opportunity to transfer into Heitman's Client Service and Marketing group, where I focus on sales support, CRM administration, and data analysis. 
+
+        <h4>Graduate School</h4>
+        <p>In 2014, I decided it was time to go back to school to expand my knowledge. I was accepted into the Kellogg School of Management at Northwestern University.
+          There, I have focused my studies on Marketing and Managerial Analytics. My anticipated graduation date is August 2016.</p>
 </div>
 
   </body>
 
   <footer class="footer">
-       <div class="container">
+       <div class="col-sm-12">
          <p class="text-muted" style="margin:25px 0px 10px 0px">Designed by Brett.</p>
        </div>
      </footer>
