--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <title>Brett A. Hogan</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.js"></script>
 
@@ -65,12 +65,12 @@
     </div><!-- /.container-fluid -->
     </nav>
 
-    <div class="header">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-sm-12">
-      <img width="500"src="photo.jpg">
-      <h1>Brett A. Hogan</h1>
-      <h2>Welcome!</h2>
+          <h1>Brett A. Hogan</h1>
+            <h2>Welcome!</h2>
+        <img width="500"src="photo.jpg">
     </div>
   </div>
 </div>
@@ -89,7 +89,6 @@
     <h4>Early Days</h4>
     <p>I grew up in Northbrook, Illinois, the son of two real estate professionals. I was a pretty active kid, participating in a variety of sports, theater, and outdoor activities growing up.
     I made a few great friends, who are still all with me today. </p>
-    <p>Sales support and CRM administration.</p>
 
     <h4>High School</h4>
     <p>When I didn't make the golf team as a freshman, I decided to go out for cross-country and track. It was then I developed my life long interest in running.
@@ -106,7 +105,7 @@
         <h4>Professional</h4>
         <p>2009 was the worst year to graduate college. I took a minimum wage internship for eight months with a company called Heitman. There, I worked in the Portfolio and Asset Management group.
           I was then hired on full time as a staff accountant in the private real estate equity group, working on two separate accounts. My time there taught me much about real estate, investment management, and
-          accounting. In 2012, I had the opportunity to transfer into Heitman's Client Service and Marketing group, where I focus on sales support, CRM administration, and data analysis. 
+          accounting. In 2012, I had the opportunity to transfer into Heitman's Client Service and Marketing group, where I focus on sales support, CRM administration, and data analysis.
 
         <h4>Graduate School</h4>
         <p>In 2014, I decided it was time to go back to school to expand my knowledge. I was accepted into the Kellogg School of Management at Northwestern University.
@@ -115,9 +114,11 @@
 
   </body>
 
-  <footer class="footer">
+  <footer>
+    <div class="container-fluid">
        <div class="col-sm-12">
          <p class="text-muted" style="margin:25px 0px 10px 0px">Designed by Brett.</p>
        </div>
+     </div>
      </footer>
 </html>
