--- a/travel.html
+++ b/travel.html
@@ -38,8 +38,7 @@
           <ul class="dropdown-menu">
             <li><a href="interests.html">Interests</a></li>
             <li><a href="travel.html">Travel</a></li>
-            <li><a href="https://en.wikipedia.org/wiki/Bruges">Brugge</a></li>
-            <li><a href="https://en.wikipedia.org/wiki/Amsterdam">Amsterdam</a></li>
+            <li><a href="photography.html">Photography</a></li>
             <!-- <li role="separator" class="divider"></li>
             <li><a href="#">Separated link</a></li>
             <li role="separator" class="divider"></li>
@@ -73,7 +72,7 @@
     <center>
      <img width="300" src="holland.JPG" class="img-rounded">
       <h1>Travel</h1>
-      <h2>A look at where I've been and where I'm going</h2>
+      <h4>I love adventures. I've been lucky enough to take some great trips over the past few years. I've included some detail on those below.</h4>
     </center>
       <!-- <p>Contact Me:</p>
       <ul>
