--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More Information <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="interests.html">Interests</a></li>
-            <li><a href="travel.html">Travel</a></li>
-            <li><a href="https://en.wikipedia.org/wiki/Bruges">Brugge</a></li>
-            <li><a href="https://en.wikipedia.org/wiki/Amsterdam">Amsterdam</a></li>
+            <li><a href="travel.html">Travel</a></li><li>
+            <li><a href="photography.html">Photography</a></li>
+
             <!-- <li role="separator" class="divider"></li>
             <li><a href="#">Separated link</a></li>
             <li role="separator" class="divider"></li>
@@ -68,21 +68,25 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-12">
+          <center>
           <h1>Brett A. Hogan</h1>
-            <h2>Welcome!</h2>
-        <img width="500"src="photo.jpg">
+            <h2>Hello Internet!</h2>
+          </center>
+          <div class="col-sm-6">
+            <img width="500"src="photo.jpg"> </div>
+          <div class="col-sm-6"></div>
+          <p>
+            My name is Brett. I am a student at the Kellogg School of Management at Northwestern University.
+            I also work full time at Heitman, a real estate investment management firm.
+            I enjoy reading, running, and working with technology. More on this on my <a href="interests.html"> interests </a>page.</p>
+          </div>
     </div>
   </div>
 </div>
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-sm-12">
-    <p>
-      Hello Internet! My name is Brett. I am a student at the Kellogg School of Management at Northwestern University.
-      I also work full time at Heitman, a real estate investment management firm.
-      I enjoy reading, running, and working with technology. More on this on my <a href="interests.html"> interests </a>page.</p>
-    </div>
+
 <div class="col-sm-12">
     <h3>Biography</h3>
 
