--- a/interests.html
+++ b/interests.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.js"></script>
-
+    <script src="https://w.soundcloud.com/player/api.js" type="text/javascript">></script>
   </head>
 
   <body>
@@ -32,10 +32,10 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More Information <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="https://en.wikipedia.org/wiki/Greece">Greece</a></li>
-            <li><a href="https://en.wikipedia.org/wiki/Copenhagen">Copenhagen</a></li>
-            <li><a href="https://en.wikipedia.org/wiki/Bruges">Brugge</a></li>
-            <li><a href="https://en.wikipedia.org/wiki/Amsterdam">Amsterdam</a></li>
+            <li><a href="interests.html">Interests</a></li>
+            <li><a href="travel.html">Travel</a></li>
+            <li><a href="photography.html">Photography</a></li>
+            
             <!-- <li role="separator" class="divider"></li>
             <li><a href="#">Separated link</a></li>
             <li role="separator" class="divider"></li>
@@ -65,7 +65,7 @@
     </div><!-- /.container-fluid -->
     </nav>
 
-    <div class="header">
+    <!-- <div class="header">
       <img width="500"src="photo.jpg">
       <h1>Brett A. Hogan</h1>
       <h2><font color="Purple">Northwestern Student</font></h2>
@@ -107,7 +107,42 @@
     </ul>
 
 
-  </body>
+  </body> -->
+
+<h1>Interests</h1>
+<h4>The first thing to know about me is that there are several things to know about me. I have a broad range of professional and personnal skills and
+  interests. I've provided a list of interests below.</h3>
+
+  <h2>Professional</h2>
+
+  <h2>Personal</h2>
+
+  <iframe class="iframe" width="50%" height="400" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https://soundcloud.com/brett-hogan-2/sets/blueslove&amp;auto_play=false&amp;buying=true&amp;liking=true&amp;download=true&amp;sharing=true&amp;show_artwork=true&amp;show_comments=true&amp;show_playcount=true&amp;show_user=true&amp;hide_related=false&amp;visual=true&amp;start_track=0&amp;callback=true">
+      </iframe>
+          <script src="https://w.soundcloud.com/player/api.js" type="text/javascript"></script>
+  <script type="text/javascript">
+    (function(){
+      var widgetIframe = document.getElementById('sc-widget'),
+          widget       = SC.Widget(widgetIframe);
+
+      widget.bind(SC.Widget.Events.READY, function() {
+        widget.bind(SC.Widget.Events.PLAY, function() {
+          // get information about currently playing sound
+          widget.getCurrentSound(function(currentSound) {
+            console.log('sound ' + currentSound.get('') + 'began to play');
+          });
+        });
+        // get current level of volume
+        widget.getVolume(function(volume) {
+          console.log('current volume value is ' + volume);
+        });
+        // set new volume level
+        widget.setVolume(50);
+        // get the value of the current position
+      });
+
+    }());
+  </script>
 
   <footer class="footer">
        <div class="container">
