--- a/travel.html
+++ b/travel.html
@@ -11,6 +11,7 @@
       h3{text-align: center;}
     </style>
       <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
+      <script src="https://code.jquery.com/jquery-2.2.0.js" charset="utf-8"></script>
       <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.js"></script>
   </head>
 
@@ -142,6 +143,21 @@
 
        </div>
 
+       <div class="container">
+
+              <h1>
+                 Where do you want to go?
+                 <small><span class="total">0 items</span></small>
+                 <a class="btn btn-primary pull-right" href="#">Add Item</a>
+               </h1>
+             </div>
+
+             <div class="row">
+               <div class="col-md-12">
+                 <ol class="todo-list">
+
+                 </ol>
+               </div>
 
      </div>
      <footer class="footer">
