--- a/interests.html
+++ b/interests.html
@@ -35,7 +35,7 @@
             <li><a href="interests.html">Interests</a></li>
             <li><a href="travel.html">Travel</a></li>
             <li><a href="photography.html">Photography</a></li>
-            
+
             <!-- <li role="separator" class="divider"></li>
             <li><a href="#">Separated link</a></li>
             <li role="separator" class="divider"></li>
@@ -43,12 +43,12 @@
           </ul>
         </li>
       </ul>
-      <form class="navbar-form navbar-left" role="search">
+      <!-- <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
-      </form>
+      </form> -->
       <ul class="nav navbar-nav navbar-right">
         <li><a href="http://twitter.com/hogan_brett">Twitter</a></li>
         <li><a href="http://facebook.com/brett.hogan3">Facebook</a></li>
@@ -114,8 +114,22 @@
   interests. I've provided a list of interests below.</h3>
 
   <h2>Professional</h2>
+      <h3>Data Analysis</h3>
+        <p>One of my greatest strengths is problem solving using data.</p>
+
+      <h3>Marketing</h3>
+      <h3>Research</h3>
+      <h3>Technical Writing</h3>
+      <h3>Process Improvement</h3>
 
   <h2>Personal</h2>
+    <h3>Literature</h3>
+    <h3>Outdoor Pursuits</h3>
+    <h3>Photography</h3>
+    <h3>Music</h3>
+      <p>I <strong>LOVE</strong> music. I enjoy listening to and learning about a variety of genres and artists, new and old. I recently restored my dad's old record player
+        and have been slowly builing a collection. Nothing beats dropping a needle and kicking back to some tunes.</p>
+      <p>I also like discovering new music via SoundCloud. Check out some of my favorites below.</p>
 
   <iframe class="iframe" width="50%" height="400" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https://soundcloud.com/brett-hogan-2/sets/blueslove&amp;auto_play=false&amp;buying=true&amp;liking=true&amp;download=true&amp;sharing=true&amp;show_artwork=true&amp;show_comments=true&amp;show_playcount=true&amp;show_user=true&amp;hide_related=false&amp;visual=true&amp;start_track=0&amp;callback=true">
       </iframe>
