--- a/travel.html
+++ b/travel.html
@@ -13,6 +13,7 @@
       <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
       <script src="https://code.jquery.com/jquery-2.2.0.js" charset="utf-8"></script>
       <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.js"></script>
+      <script src="todo.js" charset="utf-8"></script>
   </head>
 
   <body>
@@ -145,6 +146,7 @@
 
        <div class="container">
 
+         <div class="page-header">
               <h1>
                  Where do you want to go?
                  <small><span class="total">0 items</span></small>
