--- a/interests.html
+++ b/interests.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://bootswatch.com/superhero/bootstrap.min.css">
     <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.js"></script>
     <script src="https://w.soundcloud.com/player/api.js" type="text/javascript">></script>
@@ -65,70 +66,45 @@
     </div><!-- /.container-fluid -->
     </nav>
 
-    <!-- <div class="header">
-      <img width="500"src="photo.jpg">
-      <h1>Brett A. Hogan</h1>
-      <h2><font color="Purple">Northwestern Student</font></h2>
-      <p>Contact Me:</p>
-      <ul>
-        <li><a href="http://twitter.com/hogan_brett">Twitter</a></li>
-        <li><a href="http://facebook.com/brett.hogan3">Facebook</a></li>
-      </ul>
-    </div>
-
-    <h3>Summary</h3>
-    <p>
-      Brett is a student at the Kellogg School of Management at Northwestern University.
-      He is also a Senior Associate at Heitman, a real estate investment management firm.
-      He enjoys reading, running, and working with technology.</p>
-
-    <h3>Experience</h3>
-
-    <h4>Senior Associate at Heitman, 2014 - Present</h4>
-    <p>Client Service and Marketing Associate.</p>
-    <p>Sales support and CRM administration.</p>
-
-    <h4>Associate at Heitman, 2012 - 2014</h4>
-    <p>Client Service and Marketing Associate.</p>
-    <p>RFP writing.</p>
-
-    <h3>Skills</h3>
-    <ul>
-      <li>Atom, HTML, and CSS!</li>
-      <li>Helping family with technology</li>
-      <li>Microsoft Office</li>
-      <li>Making tea</li>
-    </ul>
-
-    <h3>Education</h3>
-    <ul>
-      <li>Masters of Business Administration with concentrations in Managerial Analytics, Marketing, <em>Northwestern University, 2016</em></li>
-      <li>Bachelors of Science in Finance, <em>Miami University, 2009</em></li>
-    </ul>
-
-
-  </body> -->
-
+  
 <h1>Interests</h1>
 <h4>The first thing to know about me is that there are several things to know about me. I have a broad range of professional and personnal skills and
   interests. I've provided a list of interests below.</h3>
 
   <h2>Professional</h2>
       <h3>Data Analysis</h3>
-        <p>One of my greatest strengths is problem solving using data.</p>
+        <p>One of my greatest strengths is problem solving using data. In both professional and academic settings, I have used data to provide strategic
+        recommendations to help aid in decision making. This typically involves regression analysis, crosstabulation of data, and other statistical
+        performance measures. Some examples of my work are presented below.</p>
+        <ul>
+          <li>I led a team that consulted a company looking to enter the US professional chef market. My team conducted interviews, created surveys,
+            analyzed the data, and finally wrote a report detailing our recommendation.</li>
+          <li>I have performed detailed backward looking analyses that have been used to monitor sales and marketing efforts for professional organizations.
+            These typically are then used as predictive analytical tools to determine where to focus efforts next.</li>
+          <li>I have deep experience with CRM systems and mining data within those systems for product development purposes.</li>
 
       <h3>Marketing</h3>
-      <h3>Research</h3>
+        <p>I have a solid background in marketing and branding. I have consulted for a company looking to become more consumer focused. In the future, I
+          anticipate learning about digital marketing.</p>
       <h3>Technical Writing</h3>
+        <p>I have four years of experience writing proposals for potential investors in real estate. I have also written papers on using game theory
+          to understand war time actions.</p>
       <h3>Process Improvement</h3>
+        <p>I have focused my coursework on ways to improve processes as well as resources to better achieve objectives.</p>
 
   <h2>Personal</h2>
     <h3>Literature</h3>
+      <p>I love to read and enjoy learning new topics through both fiction and nonfiction. Some of my favorite authors are Chuck Palahniuk, Cormac McCarthy,
+        Malcolm Gladwell, Elmore Leonard, Neil Gaiman, and Terry Pratchett.
     <h3>Outdoor Pursuits</h3>
+      <p>Some of my favorite past times are outdoor pursuits, such as running, camping, hiking, and golf. I enjoy the outdoors and love spending time in the wilderness.</p>
     <h3>Photography</h3>
+      <p>Recently, I have taken up photography as a hobby. I love to find beauty in the world and capture it in an image. You can find some of my favorites on my
+      <a href="photography.html"> photography </a> page.</p>
     <h3>Music</h3>
       <p>I <strong>LOVE</strong> music. I enjoy listening to and learning about a variety of genres and artists, new and old. I recently restored my dad's old record player
-        and have been slowly builing a collection. Nothing beats dropping a needle and kicking back to some tunes.</p>
+        and have been slowly builing a collection. Nothing beats dropping a needle and kicking back to some tunes. My hope is that I can relearn piano and guitar after
+      I graduate from Northwestern.</p>
       <p>I also like discovering new music via SoundCloud. Check out some of my favorites below.</p>
 
   <iframe class="iframe" width="50%" height="400" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https://soundcloud.com/brett-hogan-2/sets/blueslove&amp;auto_play=false&amp;buying=true&amp;liking=true&amp;download=true&amp;sharing=true&amp;show_artwork=true&amp;show_comments=true&amp;show_playcount=true&amp;show_user=true&amp;hide_related=false&amp;visual=true&amp;start_track=0&amp;callback=true">
