--- a/photography.html
+++ b/photography.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Brett A. Hogan</title>
+    <title>Photography</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" href="https://bootswatch.com/superhero/bootstrap.min.css">
     <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 
   </head>
+
 
   <body>
     <nav class="navbar navbar-default">
@@ -63,3 +67,76 @@
     </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
     </nav>
+
+
+
+    <body>
+
+    <div class="container-fluid">
+      <h2>Image Gallery</h2>
+      <p>Below are some of my favorite photos I've taken. Click on the images to see it in full size:</p>
+      <div class="row">
+        <div class="col-md-4">
+          <a href="andrea.jpg" class="thumbnail">
+            <p>Andrea, my wife, on our honeymoon in Greece</p>
+            <img src="andrea.jpg" alt="Andrea" width="250">
+          </a>
+        </div>
+        <div class="col-md-4">
+          <a href="amsterdam.jpg" class="thumbnail">
+            <p>A busy street in the heart of Amsterdam</p>
+            <img src="amsterdam.jpg" alt="Amsterdam" width="250">
+          </a>
+        </div>
+        <div class="col-md-4">
+          <a href="prarieview.jpg" class="thumbnail">
+            <p>Prarie View, Kansas</p>
+            <img src="prarieview.jpg" alt="Prarie View" width="250">
+          </a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <a href="sunset.jpg" class="thumbnail">
+            <p>A summertime sunset in South Haven, Michigan</p>
+            <img src="sunset.jpg" alt="Sunset" width="250">
+          </a>
+        </div>
+        <div class="col-md-4">
+          <a href="greece2.jpg" class="thumbnail">
+            <p>Paros, Greece</p>
+            <img src="greece2.jpg" alt="Paros, Greece" width="250">
+          </a>
+        </div>
+        <div class="col-md-4">
+          <a href="greece3.jpg" class="thumbnail">
+            <p>Santorini, Greece</p>
+            <img src="greece3.jpg" alt="Santorini, Greece" width="250">
+          </a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <a href="ny.jpg" class="thumbnail">
+            <p>The city that never sleep, New York, New York</p>
+            <img src="ny.jpg" alt="New York" width="250">
+          </a>
+        </div>
+        <div class="col-md-6">
+          <a href="copenhagen2.jpg" class="thumbnail">
+            <p>A look down the road in Old Latino, in Copenhagen, Denmark</p>
+            <img src="copenhagen2.jpg" alt="Copenhagen" width="250">
+          </a>
+        </div>
+
+      </div>
+    </div>
+
+    </body>
+
+    <footer class="footer">
+         <div class="container">
+           <p class="text-muted" style="margin:25px 0px 10px 0px">Designed by Brett.</p>
+         </div>
+       </footer>
+    </html>
