--- a/travel.html
+++ b/travel.html
@@ -4,6 +4,7 @@
     <title>My Travels</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://bootswatch.com/superhero/bootstrap.min.css">
     <style>
       p{text-align: center;}
       h1{text-align: center; text-decoration: underline;}
@@ -99,7 +100,7 @@
                <li>Santorini</li>
                </center>
 
-           <center><a class="btn btn-success" href="https://www.google.com/maps/d/edit?mid=zjCmL6FDuZp8.kf9n2Nmc3qoU&usp=sharing" role="button">View in Google Maps</a></center>
+           <center><a class="btn btn-primary" href="https://www.google.com/maps/d/edit?mid=zjCmL6FDuZp8.kf9n2Nmc3qoU&usp=sharing" role="button">View in Google Maps</a></center>
          </div>
          <div class="col-sm-4">
            <h3>Copenhagen</h3>
@@ -108,7 +109,7 @@
               <img width="200"src="copenhagen.JPG" class="img-rounded" style="margin:10px 0px 10px 0px">
             </center>
             <center>
-              <a class="btn btn-success" href="https://www.google.com/maps/d/edit?mid=zjCmL6FDuZp8.kdymUDgy2rgI&usp=sharing" role="button">View in Google Maps</a>
+              <a class="btn btn-primary" href="https://www.google.com/maps/d/edit?mid=zjCmL6FDuZp8.kdymUDgy2rgI&usp=sharing" role="button">View in Google Maps</a>
             </center>
            </div>
          <div class="col-sm-4">
@@ -118,7 +119,7 @@
              <img width="200"src="brugge.JPG" class="img-rounded" style="margin:10px 0px 10px 0px">
            </center>
            <center>
-             <a class="btn btn-success" href="https://www.google.com/maps/d/edit?mid=zjCmL6FDuZp8.k0qpPmGcbYao&usp=sharing" role="button">View in Google Maps</a>
+             <a class="btn btn-primary" href="https://www.google.com/maps/d/edit?mid=zjCmL6FDuZp8.k0qpPmGcbYao&usp=sharing" role="button">View in Google Maps</a>
           </center>
          </div>
        </div>
@@ -149,58 +150,23 @@
          <div class="page-header">
               <h1>
                  Where do you want to go?
-                 <small><span class="total">0 items</span></small>
+
                  <a class="btn btn-primary pull-right" href="#">Add Item</a>
                </h1>
+            <center>  <h4> <small><span class="total">0 items</span></small></h4></center>
              </div>
 
              <div class="row">
                <div class="col-md-12">
                  <ol class="todo-list">
-
                  </ol>
                </div>
 
      </div>
      <footer class="footer">
           <div class="container">
-            <p class="text-muted" style="margin:25px 0px 10px 0px">Designed by Brett.</p>
+            <h5 class="text-muted" style="margin:25px 0px 10px 0px">Designed by Brett.</h5>
           </div>
         </footer>
 
-</html>
-    <!-- <h3>Greece</h3>
-
-    <h4>In 2013, my wife and I went on a honeymoon in Greece.</h4>
-    <img width="500"src="greece.JPG">
-    <p>Our travels took us to a few great places, such as:</p>
-    <ul>
-      <li>Athens</li>
-      <li>Mykonos</li>
-      <li>Paros</li>
-      <li>Santorini</li>
-    </ul> --> -->
-
-    <!-- <h3>Copenhagen</h3>
-    <h4>In 2015, I studied abroad in Copenhagen, Denmark.</p>
-    <img width="500"src="copenhagen.JPG"> -->
-
-    <!-- <h3>Brugge and Amsterdam</h3>
-    <h4>In 2015, after Copenhagen, my wife and I travelled to Brugge, Belgium and Amsterdam, The Netherlands.</p>
-    <img width="500"src="brugge.JPG">
-    <img width="500"src="holland.JPG"> -->
-
-    <!-- <h3>Places I'd like to go</h3>
-    <h4>In addition to the places I've been, there are several places I'd like to visit someday</h4>
-    <ul>
-      <li>The United Kingdom and Ireland <em>(all of it)</em></li>
-      <li>Japan</li>
-      <li>The Netherlands <em>(again)</em></li>
-      <li>Thailand</li>
-      <li>The Czech Republic</li>
-      <li>Chile</li>
-      <li>Italy</li>
-      <li>France</li>
-    </ul>
-  </body>
 </html>
