--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" href="https://bootswatch.com/superhero/bootstrap.min.css">
     <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.js"></script>
 
@@ -72,14 +73,14 @@
           <h1>Brett A. Hogan</h1>
             <h2>Hello Internet!</h2>
           </center>
-          <div class="col-sm-6">
-            <img width="500"src="photo.jpg"> </div>
-          <div class="col-sm-6"></div>
-          <p>
+          <div class="col-sm-12">
+            <p>
             My name is Brett. I am a student at the Kellogg School of Management at Northwestern University.
             I also work full time at Heitman, a real estate investment management firm.
             I enjoy reading, running, and working with technology. More on this on my <a href="interests.html"> interests </a>page.</p>
-          </div>
+          <div class="col-sm-12"></div>
+          <center><img width="500" class="img-rounded"src="photo.jpg"> </center>
+        </div>
     </div>
   </div>
 </div>
