--- a/interests.html
+++ b/interests.html
@@ -3,9 +3,9 @@
   <head>
     <title>Brett A. Hogan</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://bootswatch.com/superhero/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.js"></script>
     <script src="https://w.soundcloud.com/player/api.js" type="text/javascript">></script>
@@ -66,13 +66,15 @@
     </div><!-- /.container-fluid -->
     </nav>
 
-  
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-12">
 <h1>Interests</h1>
-<h4>The first thing to know about me is that there are several things to know about me. I have a broad range of professional and personnal skills and
-  interests. I've provided a list of interests below.</h3>
+<h5>The first thing to know about me is that there are several things to know about me. I have a broad range of professional and personnal skills and
+  interests. I've provided a list of interests below.</h5>
 
   <h2>Professional</h2>
-      <h3>Data Analysis</h3>
+      <h4>Data Analysis</h4>
         <p>One of my greatest strengths is problem solving using data. In both professional and academic settings, I have used data to provide strategic
         recommendations to help aid in decision making. This typically involves regression analysis, crosstabulation of data, and other statistical
         performance measures. Some examples of my work are presented below.</p>
@@ -82,32 +84,39 @@
           <li>I have performed detailed backward looking analyses that have been used to monitor sales and marketing efforts for professional organizations.
             These typically are then used as predictive analytical tools to determine where to focus efforts next.</li>
           <li>I have deep experience with CRM systems and mining data within those systems for product development purposes.</li>
-
-      <h3>Marketing</h3>
+</ul>
+      <h4>Marketing</h4>
         <p>I have a solid background in marketing and branding. I have consulted for a company looking to become more consumer focused. In the future, I
           anticipate learning about digital marketing.</p>
-      <h3>Technical Writing</h3>
+      <h4>Technical Writing</h4>
         <p>I have four years of experience writing proposals for potential investors in real estate. I have also written papers on using game theory
           to understand war time actions.</p>
-      <h3>Process Improvement</h3>
+      <h4>Process Improvement</h4>
         <p>I have focused my coursework on ways to improve processes as well as resources to better achieve objectives.</p>
 
   <h2>Personal</h2>
-    <h3>Literature</h3>
+    <h4>Reading</h4>
       <p>I love to read and enjoy learning new topics through both fiction and nonfiction. Some of my favorite authors are Chuck Palahniuk, Cormac McCarthy,
-        Malcolm Gladwell, Elmore Leonard, Neil Gaiman, and Terry Pratchett.
-    <h3>Outdoor Pursuits</h3>
+        Malcolm Gladwell, Elmore Leonard, Neil Gaiman, and Terry Pratchett.</p>
+    <h4>Outdoor Pursuits</h4>
       <p>Some of my favorite past times are outdoor pursuits, such as running, camping, hiking, and golf. I enjoy the outdoors and love spending time in the wilderness.</p>
-    <h3>Photography</h3>
+    <h4>Photography</h4>
       <p>Recently, I have taken up photography as a hobby. I love to find beauty in the world and capture it in an image. You can find some of my favorites on my
       <a href="photography.html"> photography </a> page.</p>
-    <h3>Music</h3>
+    <h4>Music</h4>
       <p>I <strong>LOVE</strong> music. I enjoy listening to and learning about a variety of genres and artists, new and old. I recently restored my dad's old record player
         and have been slowly builing a collection. Nothing beats dropping a needle and kicking back to some tunes. My hope is that I can relearn piano and guitar after
       I graduate from Northwestern.</p>
       <p>I also like discovering new music via SoundCloud. Check out some of my favorites below.</p>
+</div>
+</div>
+</div>
 
-  <iframe class="iframe" width="50%" height="400" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https://soundcloud.com/brett-hogan-2/sets/blueslove&amp;auto_play=false&amp;buying=true&amp;liking=true&amp;download=true&amp;sharing=true&amp;show_artwork=true&amp;show_comments=true&amp;show_playcount=true&amp;show_user=true&amp;hide_related=false&amp;visual=true&amp;start_track=0&amp;callback=true">
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-sm-12">
+
+  <iframe class="iframe" width="100%" height="400" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https://soundcloud.com/brett-hogan-2/sets/blueslove&amp;auto_play=false&amp;buying=true&amp;liking=true&amp;download=true&amp;sharing=true&amp;show_artwork=true&amp;show_comments=true&amp;show_playcount=true&amp;show_user=true&amp;hide_related=false&amp;visual=true&amp;start_track=0&amp;callback=true">
       </iframe>
           <script src="https://w.soundcloud.com/player/api.js" type="text/javascript"></script>
   <script type="text/javascript">
@@ -133,6 +142,12 @@
 
     }());
   </script>
+</div>
+</div>
+</div>
+
+</body>
+
 
   <footer class="footer">
        <div class="container">
