--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
 
     <h4>Early Days</h4>
     <p>I grew up in Northbrook, Illinois, the son of two real estate professionals. I was a pretty active kid, participating in a variety of sports, theater, and outdoor activities growing up.
-    I made a few great friends, who are still all with me today. </p>
+    I made a few great friends, who I am still close with today. </p>
 
     <h4>High School</h4>
-    <p>When I didn't make the golf team as a freshman, I decided to go out for cross-country and track. It was then I developed my life long interest in running.
-    I also sang with the high school choir, as well as with some of my best friends in an a capella group called "The Bassics". We were ok.</p>
+    <p>When I didn't make the golf team as a freshman, I decided to go out for cross-country and track. It was then that I developed my life long interest in running.
+    I also sang with the high school choir, as well as with some of my best friends in an a capella group called "The Bassics". We were pretty good!</p>
     <p>I was also heavily involved in Boy Scouts. I spent summers at camp earning merit badges and selling lemonade to raise money for our troop.
-      Fall and spring brought campouts in Wisconsin with activities ranging from mountain biking to rocketry.
+      Fall and spring brought campouts in Wisconsin with activities ranging from mountain biking to rocketry as well as a good amount of community service.
       In 2005, I earned the rank of Eagle Scout, one of my proudest achievements. </p>
       <p>While in high school, I met my now wife, Andrea. We've been together for over 10 years.</p>
 
@@ -107,7 +107,7 @@
         Oxford is a beautiful place, and I encourage anyone passing through to stop by for a few hours.</p>
 
         <h4>Professional</h4>
-        <p>2009 was the worst year to graduate college. I took a minimum wage internship for eight months with a company called Heitman. There, I worked in the Portfolio and Asset Management group.
+        <p>2009 was the worst year to graduate college. I took an internship for eight months with a company called Heitman. There, I worked in the Portfolio and Asset Management group.
           I was then hired on full time as a staff accountant in the private real estate equity group, working on two separate accounts. My time there taught me much about real estate, investment management, and
           accounting. In 2012, I had the opportunity to transfer into Heitman's Client Service and Marketing group, where I focus on sales support, CRM administration, and data analysis.
 
