--- a/interests.html
+++ b/interests.html
@@ -70,7 +70,7 @@
       <div class="row">
         <div class="col-sm-12">
 <h1>Interests</h1>
-<h5>The first thing to know about me is that there are several things to know about me. I have a broad range of professional and personnal skills and
+<h5>The first thing to know about me is that there are several things to know about me. I have a broad range of professional and personal skills and
   interests. I've provided a list of interests below.</h5>
 
   <h2>Professional</h2>
