--- a/photography.html
+++ b/photography.html
@@ -118,7 +118,7 @@
       <div class="row">
         <div class="col-md-6">
           <a href="ny.jpg" class="thumbnail">
-            <p>The city that never sleep, New York, New York</p>
+            <p>The city that never sleeps, New York, New York</p>
             <img src="ny.jpg" alt="New York" width="250">
           </a>
         </div>
